# app/Http/Controllers/Api/V1/DepartmentController.php
@@ -4,25 +4,20 @@ namespace App\Http\Controllers\Api\V1;
 
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
-use App\Models\Department;
+use App\Traits\DepartmentTrait;
 use Throwable;
+use App\Http\Requests\DepartmentRequest;
 
 
 
 class DepartmentController extends Controller
 {
-   
-
-    private  $departmentObject;
-
-    public function __construct(Department $departmentObject){     //Employee ->  Response and $employeeObject -> Request
-        $this->departmentObject = $departmentObject;
-    }
+    use DepartmentTrait;
     /**
      * @OA\Get(
      ** path="/department",
-     *   tags={"Departments"},
-     *   summary="test",
+     *   tags={"Department"},
+     *   summary="List all Checklist Category",
      *   operationId="index",
      *
      *  
@@ -51,59 +46,45 @@ class DepartmentController extends Controller
      *      )
      *)
      **/
-    public function index()
-    {
-        return $this->departmentObject->getDepartmentRecords(); 
-       
-    }
+    public function index(Request $request) {
 
-    /**
-     * Show the form for creating a new resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function create()
-    {
-        //
-    }
-        /**
+        try {
+            $response = $this->getAllDepartment($request->all());
+
+            $errorcode = 200;
+
+        } catch(Throwable $e) {
+            $response['message'] = $e->getMessage();
+            $errorcode = @$e->getCode() ? $e->getCode() : 500;
+
+        }
+
+        return response()->json($response, $errorcode);
+
+    }       
+     /**
      * @OA\Post(
      ** path="/department",
-     *   tags={"Departments"},
-     *   summary="store",
+     *   tags={"Department"},
+     *   summary="Store checklist category",
      *   operationId="store",
-     * @OA\Parameter(
-     *      name="name",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *  @OA\Parameter(
-     *      name="status",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ), 
-     * @OA\Parameter(
-     *      name="created_by",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *  @OA\Parameter(
-     *      name="updated_by",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
+     * @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="status",
+     *                     type="integer"
+     *                 ),
+     *                 example={ "name": "Jessica Smith", "status" : "1"}
+     *             )
+     *         )
+     *     ),
+     *  
      *   @OA\Response(
      *      response=200,
      *       description="Success",
@@ -129,111 +110,38 @@ class DepartmentController extends Controller
      *      )
      *)
      **/
-    public function store(Request $request)
-    {
-        // $store = Department::create($request->all());
-       try {
-        $store = Department::create($request->all());
-        return response()->json([
-            'success' => true,
-            'data' => $store->toArray()
-        ]);
-    } catch (Throwable $e) {        
-        return response()->json([
-           'success' => true,
-           'message' => $e->getMessage()
-        ]);
-     }
-        //  $this->departmentObject->createDepartment($request);  
-    }
-        
-    /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function show($id)
-    {
-    }
-  /**
-     * @OA\GET(
-     ** path="/department/{id}",    
-     *   tags={"Departments"},
-     *   summary="edit",
-     *   operationId="edit",
-     *
-     * @OA\Parameter(
-     *          name="id",
-     *          required=true,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="integer"
-     *          )
-     *      ),
-     *   @OA\Response(
-     *      response=200,
-     *       description="Success",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *)
-     **/
-   
-    /**
-     * Show the form for editing the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function edit($id)
-    {
+    public function store(DepartmentRequest $request) {
+
         try {
-            $department = Department::findOrFail($id);      
-            return response()->json([
-                'success' => true,
-                'data' => $department->toArray()
-            ]);
-        } catch (Throwable $e) {        
-            return response()->json([
-                'success' => true,
-                'message' => $e->getMessage()
-            ]);
-            }
-           
+            $response = $this->createOrUpdateDepartment($request->all(), false, @request()->user()->id);
+
+            $errorcode = 200;
+
+        } catch(Throwable $e) {
+            $response['message'] = $e->getMessage();
+            $errorcode = @$e->getCode() ? $e->getCode() : 500;
+
+        }
+
+        return response()->json($response, $errorcode);
+
     }
- /**
-     * @OA\PUT(
+    /**
+     * @OA\Get(
      ** path="/department/{id}",
-     *   tags={"Departments"},
-     *   summary="update",
-     *   operationId="update",
-      * @OA\Parameter(
-     *          name="id",
-     *          required=true,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="integer"
-     *          )
-     *      ),
-
+     *   tags={"Department"},
+     *   summary="Edit Department",
+     *   operationId="edit",
+     *  @OA\Parameter(
+     *    description="ID of category",
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    example="1",
+     *    @OA\Schema(
+     *       type="integer",
+     *    )
+     * ),
      *   @OA\Response(
      *      response=200,
      *       description="Success",
@@ -259,75 +167,153 @@ class DepartmentController extends Controller
      *      )
      *)
      **/
-    
-    public function update(Request $request)
-    {
-        return $this->departmentObject->getDepartmentRecords($request); 
-        
-      
-    }
-    /**
-     * @OA\DELETE(
-     ** path="/department/{id}",    
-     *   tags={"Departments"},
-     *   summary="delete",
-     *   operationId="destroy",
-     *
-     * @OA\Parameter(
-     *          name="id",
-     *          required=true,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="integer"
-     *          )
-     *      ),
-     *   @OA\Response(
-     *      response=200,
-     *       description="Success",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *)
-     **/
+    public function show($id, Request $request) {
 
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function destroy($id)
-    {
         try {
-            $department = Department::find($id);   
-            $department -> delete();   
-            return response()->json([
-                'success' => true,
-                'data' => $department->toArray()
-            ]);
-        } catch (Throwable $e) {        
-            return response()->json([
-                'success' => true,
-                'message' => $e->getMessage()
-            ]);
-            }
-           
+            $response = $this->getDepartmentById($id);
+
+            $errorcode = 200;
+
+        } catch(Throwable $e) {
+            $response['message'] = $e->getMessage();
+            $errorcode = @$e->getCode() ? $e->getCode() : 500;
+
+        }
+
+        return response()->json($response, $errorcode);
+
     }
+    /**
+     * @OA\Put(
+     ** path="/department/{id}",
+     *   tags={"Department"},
+     *   summary="update Department",
+     *   operationId="put",
+     * @OA\Parameter(
+     *    description="ID of category",
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    example="1",
+     *    @OA\Schema(
+     *       type="integer",
+     *    )
+     * ),
+     * @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="name",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="status",
+ *                     type="integer"
+ *                 ),
+ *                 example={ "name": "Jessica Smith", "status" : "1"}
+ *             )
+ *         )
+ *     ),
+     *  
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    public function update($id, DepartmentRequest $request) {
+
+        try {
+            $response = $this->createOrUpdateDepartment($request->all(), $id, @request()->user()->id);
+
+            $errorcode = 200;
+
+        } catch(Throwable $e) {
+            $response['message'] = $e->getMessage();
+            $errorcode = @$e->getCode() ? $e->getCode() : 500;
+
+        }
+
+        return response()->json($response, $errorcode);
+
+    }
+    /**
+     * @OA\Delete(
+     ** path="/department/{id}",
+     *   tags={"Department"},
+     *   summary="Edit Department",
+     *   operationId="delete",
+     *  @OA\Parameter(
+     *    description="ID of category",
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    example="1",
+     *    @OA\Schema(
+     *       type="integer",
+     *    )
+     * ),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    public function destroy($id, Request $request) {
+
+        try {
+            $response = $this->deleteDepartmentById($id);
+
+            $errorcode = 200;
+
+        } catch(Throwable $e) {
+            $response['message'] = $e->getMessage();
+            $errorcode = @$e->getCode() ? $e->getCode() : 500;
+
+        }
+
+        return response()->json($response, $errorcode);
+
+    }
+ 
+   
 }
