# storage/api-docs/api-docs.json
@@ -378,9 +378,9 @@
         "/department": {
             "get": {
                 "tags": [
-                    "Departments"
+                    "Department"
                 ],
-                "summary": "test",
+                "summary": "List all Checklist Category",
                 "operationId": "index",
                 "responses": {
                     "200": {
@@ -405,44 +405,31 @@
             },
             "post": {
                 "tags": [
-                    "Departments"
+                    "Department"
                 ],
-                "summary": "store",
+                "summary": "Store checklist category",
                 "operationId": "store",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "status",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "created_by",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "updated_by",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "status": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "Jessica Smith",
+                                    "status": "1"
+                                }
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -468,18 +455,20 @@
         "/department/{id}": {
             "get": {
                 "tags": [
-                    "Departments"
+                    "Department"
                 ],
-                "summary": "edit",
+                "summary": "Edit Department",
                 "operationId": "edit",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
+                        "description": "ID of category",
                         "required": true,
                         "schema": {
                             "type": "integer"
-                        }
+                        },
+                        "example": "1"
                     }
                 ],
                 "responses": {
@@ -505,20 +494,43 @@
             },
             "put": {
                 "tags": [
-                    "Departments"
+                    "Department"
                 ],
-                "summary": "update",
-                "operationId": "update",
+                "summary": "update Department",
+                "operationId": "put",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
+                        "description": "ID of category",
                         "required": true,
                         "schema": {
                             "type": "integer"
-                        }
+                        },
+                        "example": "1"
                     }
                 ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "status": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "Jessica Smith",
+                                    "status": "1"
+                                }
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -542,18 +554,20 @@
             },
             "delete": {
                 "tags": [
-                    "Departments"
+                    "Department"
                 ],
-                "summary": "delete",
-                "operationId": "destroy",
+                "summary": "Edit Department",
+                "operationId": "delete",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
+                        "description": "ID of category",
                         "required": true,
                         "schema": {
                             "type": "integer"
-                        }
+                        },
+                        "example": "1"
                     }
                 ],
                 "responses": {
